# arena_camera_ros2

./: .clang-format  .gitignore  Dockerfile  LICENSE.md  README.md  arena_camera_ros_entrypoint.sh  docker-compose.yml  ros2_arena_setup.sh  ros2_ws_and_software.code-workspace  ros_eloquent_desktop.dockerfile  ubuntu1804.dockerfile
.devcontainer/: devcontainer.json
.github/: jira-bot.yaml
resources/ArenaSDK/linux64/: Arena_SDK_reinstall_on_linux_64.sh
ros2_ws/: arena_api-2.0.0-py3-none-any.whl  ros2_ws_and_software.code-workspace  usefull_cmnds.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/src/arena_camera_node/: CMakeLists.txt  __________________________________________setup.cfg  package.xml  setup.py
ros2_ws/src/arena_camera_node/__________________________________________arena_camera_node/: image_publisher.py  trigger_image_client.py
ros2_ws/src/arena_camera_node/arena_camera_node/: _enum_translator.py  device_manager.py  image_publisher.py  main.py  node_manager.py  run.py  trigger_image.py  trigger_image_client.py  trigger_image_service.py  vs_ws.code-workspace
ros2_ws/src/arena_camera_node/arena_camera_node/launch/: lunch_run.launch.py
ros2_ws/src/arena_camera_node/cmake/: Findarena_sdk.cmake
ros2_ws/src/arena_camera_node/src/: ArenaCameraNode.cpp  ArenaCameraNode.h  LightArena.cpp  LightArena.h  main.cpp  some_file.cpp  trigger_image_client.cpp
ros2_ws/src/arena_camera_node/src/light_arena/: deviceinfo_helper.cpp  deviceinfo_helper.h
ros2_ws/src/arena_camera_node/src/rclcpp_adapter/: pixelformat_translation.cpp  pixelformat_translation.h  quilty_of_service_translation.cpp
ros2_ws/src/arena_camera_node/src/rclcpp_arena_adapter/: pixelformat_translation.cpp  pixelformat_translation.h
ros2_ws/src/arena_camera_software_trigger/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/arena_camera_software_trigger/srv/: TriggerImage.srv
ros2_ws/temp to move to sfotware/: reboot_all_devices.py
