<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_camera_node</name>
  <version>0.0.0</version>
  <description>Lucid Camera ROS2 Driver</description>
  <maintainer email="support@thinklucid.com"></maintainer>
  <license>TODO:</license>

  <!-- BUILD DEB __________________________________________________________ -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- EXEC  DEB ___________________________________________________________-->

  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <!-- create sensor_msgs Image-->

  <exec_depend>python3-numpy</exec_depend> 


  <!-- TEST  DEB ___________________________________________________________-->

  <!--
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
