<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_camera_node</name>
  <version>0.0.1</version>

  <description>Lucid Camera ROS2 Driver Node</description>
  <author>LUCID Vision Labs</author>
  <maintainer email="support@thinklucid.com">LUCID Vision Labs</maintainer>
  <license>MIT</license>


  <!-- 
    NEEDED FOR MULTIPLE REASONS/STAGES
      https://www.ros.org/reps/rep-0149.html#depend-multiple

      - python3-numpy needed for Image type msgs
        <depend>python3-numpy</depend>
  <depend>ament_cmake</depend>
  <depend>ament_cmake_python</depend>

  -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>



  <!--
    NEEDED AT BUILD TIME
      https://www.ros.org/reps/rep-0149.html#buildtool-depend-multiple
        <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  -->

  <!--
    NEEDED AT EXEC TIME
      https://www.ros.org/reps/rep-0149.html#exec-depend-multiple
        <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  -->




  <!--
    NEEDED FOR RUNNING PKG UNIT TESTS
      https://www.ros.org/reps/rep-0149.html#test-depend-multiple
      
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
