<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_camera_software_trigger</name>
  <version>0.0.0</version>
  <description>Lucid Camera ROS2 Driver Software Trigger</description>
  <maintainer email="support@thinklucid.com"></maintainer>
  <license>TODO:</license>


  <!-- 
    NEEDED AT BUILD TIME 
      https://www.ros.org/reps/rep-0149.html#buildtool-depend-multiple
  -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- 
    NEED TO EXCUTE AT BUILD TIME 
      https://www.ros.org/reps/rep-0149.html#buildtool-depend-multiple
  -->
  <!-- at pkg creation 
  -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--
    NEEDED AT EXEC TIME
      https://www.ros.org/reps/rep-0149.html#exec-depend-multiple
  -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!--
    NEEDED FOR RUNNING PKG UNIT TESTS
      https://www.ros.org/reps/rep-0149.html#test-depend-multiple
  -->
  <!-- at pkg creation 
  -->
  <test_depend>ament_lint_auto</test_depend>

  <!-- at pkg creation 
  -->
  <test_depend>ament_lint_common</test_depend>

  <!--
      https://www.ros.org/reps/rep-0149.html#member-of-group-multiple
  -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>    <!-- at pkg creation-->
  </export>
</package>
